# ProjectZenith

./: .gitignore  CMakeLists.txt  EngineConfig.h.in  README.md  dev.cpp  main.cpp  runLauncher.cpp  stable.cpp
Stella/: CMakeLists.txt  contentLoad.cpp  contentLoad.h  stella.cpp  stella.h  sysenv.h
Stella/AbstractionFramework/: absFrame.h
Stella/AssetFramework/: objFrame.cpp  objFrame.h
Stella/ModuleFramework/: modLoad.cpp  modLoad.h
Stella/RenderingFramework/: renFrame.h
StellaLauncher/: CMakeLists.txt  launchbase.cpp  launchbase.h  runLauncher.cpp
ZenithEngine/: CMakeLists.txt  launchbase.cpp  launchbase.h  runLauncher.cpp
ZenithLib/: CMakeLists.txt  EngineConfig.h.in  sysenv.h  zenith.cpp  zenith.h
ZenithLib/Frameworks/: baseFrame.h  contentLoad.h
ZenithLib/Frameworks/AssetFramework/: objFrame.cpp  objFrame.h
ZenithLib/Frameworks/ModuleFramework/: modLoad.h
ZenithLib/Frameworks/RenderingFramework/shaders/: Basic.frag
assets/shaders/: Basic.vert
headers/: celestial.h  nphys.h  pangalactic.h
launcher/: CMakeLists.txt  launchbase.cpp  launchbase.h  runLauncher.cpp
modules/AltInput/: controller.h  voice.h
modules/SatCom/: CMakeLists.txt  satcom.h
processes/: makeStarSys.h
processes/ModuleFramework/: modLoad.cpp  modLoad.h
processes/ObjectFramework/: objFrame.cpp  objFrame.h
